# Pomordor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml  pull_request_template.md
.github/workflows/: cmake.yml  cmake2017.yml  codeql-analysis.yml
PomordorEngine/: CMakeLists.txt  Pome.h  Toast.cpp  Toast.h  Util.h  main.cpp  main.h  pegpch.cpp  pegpch.h
PomordorEngine/Core/: Core.h
PomordorEngine/FileSystem/: FileManager.cpp  FileManager.h  IFile.h
PomordorEngine/Util/: PyhtonScript.cpp  PyhtonScript.h  Util.cpp
PomordorEngine/src/: Pome.h  Util.cpp  Util.h  pegpch.h
PomordorEngine/src/Clock/: Clock.cpp  Clock.h
PomordorUI/: CMakeLists.txt  Popup.cpp  Popup.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pompch.cpp  pompch.h
PomordorUI/assets/: files.qrc  icon.rc
PomordorUI/src/: main.cpp  pompch.h
PomordorUI/src/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
PomordorUI/src/SplashWidget/: splashwidget.cpp  splashwidget.h  splashwidget.ui
PomordorUI/src/Timer/: Prop.cpp  Prop.h  Prop.ui  Timer.cpp  Timer.h  Timer.ui  Titlebar.cpp  Titlebar.h  TrayIcon.cpp  TrayIcon.h
PomordorUI/src/TimerPage/: ScheduleDialog.cpp  ScheduleDialog.h  ScheduleDialog.ui  Timer.cpp  Timer.h  TimerPage.cpp  TimerPage.h  TimerPage.ui  Titlebar.cpp  Titlebar.h  TrayIcon.cpp  TrayIcon.h
PomordorUI/src/TodoPage/: TodoItemList.cpp  TodoItemList.h  TodoItemWidget.cpp  TodoItemWidget.h  TodoItemWidget.ui  TodoPage.cpp  TodoPage.h  TodoPage.ui
Tests/: CMakeLists.txt  ExampleTests.cpp
cmake/: googletest_config.cmake  jsoncpp_config.cmake  pomordor_config.cmake
